--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -37,18 +37,18 @@
 						th:src="@{/img/company_white.png}"></i> <span class="links_name">기업
 						관리</span>
 			</a> <span class="tooltip">기업 관리</span></li>
-			<li><a class="icon_img" th:href="@{/__${session.role}__/professor}"> <i
+<!-- 			<li><a class="icon_img" th:href="@{/__${session.role}__/professor}"> <i
 					class='bx bx-pie-chart-alt-2'><img
 						th:src="@{/img/professor_white.png}"></i> <span
 					class="links_name">강사 관리</span>
 			</a> <span class="tooltip">강사 관리</span></li>
-			<li><a class="icon_img" th:href="@{/__${session.role}__/lecture}"> <i
+			<li><a class="icon_img" th:href="@{/__${session.role}__/subject}"> <i
 					class='bx bx-pie-chart-alt-2'><img
 						th:src="@{/img/subject_white.png}"></i> <span class="links_name">과목
 						관리</span>
-			</a> <span class="tooltip">과목 관리</span></li>
+			</a> <span class="tooltip">과목 관리</span></li> -->
 			
-			<li><a class="icon_img" th:href="@{/__${session.role}__/class}"> <i
+			<li><a class="icon_img" th:href="@{/__${session.role}__/lecture}"> <i
 					class='bx bx-cart-alt'><img th:src="@{/img/lecture_white.png}"></i>
 					<span class="links_name">강의 관리</span>
 			</a> <span class="tooltip">강의 관리</span></li>
