--- a/KosaESS/src/main/resources/templates/include/student_footer.html
+++ b/KosaESS/src/main/resources/templates/include/student_footer.html
@@ -6,7 +6,7 @@
 			<div class="footerBody">
 				<div class="footerImg">
 					<a th:href="@{/student}"><img th:src="@{/img/footer_logo.png}"
-						style="height: 130px;"></a>
+						style="height: 100px;"></a>
 				</div>
 				<div class="links">
 					<h2>Links</h2>
@@ -23,23 +23,23 @@
 					<h2>Contact</h2>
 					<ul>
 						<li><img th:src="@{/img/ping.png}"><span
-							style="width: 15%">주소 </span><span>서울시 용산구 청파로 61길 5 6F~8F</span></li>
+							style="width: 14%">주소 </span><span>서울시 용산구 청파로 61길 5 6F~8F</span></li>
 						<li><img th:src="@{/img/phone.png}"><span>전화번호 </span><span>
 								010-5744-9937</span></li>
-						<li><img th:src="@{/img/email.png}"><span>이메일 </span><span>
+						<li><img th:src="@{/img/email.png}"><span style="width: 12%">이메일 </span><span>
 								kcceducation@gmail.com</span></li>
 					</ul>
 				</div>
 				<div class="emailJoin">
 					<label for="email"
 						style="padding-bottom: 20%; color: #E7EFF3; font-weight: bold; font-size: 18px;">협회
-						소식을 받아보새요.</label> <input type="email" value="이메일을 입력하세요." id="email">
+						소식을 받아보새요.</label> <input type="email" value="이메일을 입력하세요." id="email" style="width: 80%;">
 					<button type="submit">구독하기</button>
 				</div>
 			</div>
 		</div>
 		<div class="footerFoot">
-			&copy; KCCEducation Footer Template by <a th:href="@{/student}">KOSA</a>
+			&copy; KCCEducation Template by <a th:href="@{/student}">OREO</a>
 		</div>
 	</footer>
 </div>
