--- a/KosaESS/src/main/resources/templates/student/class_detail.html
+++ b/KosaESS/src/main/resources/templates/student/class_detail.html
@@ -173,7 +173,7 @@
 	</div>
 	<script th:inline="javascript">
 		/* 스크립트 내에서 Thymeleaf 변수를 선언하고 값 할당 */
-		var clssCd = /*[[${classDetail.clssCd}]]*/'CLS0000002';
+		var clssCd = /*[[${classDetail.clssCd}]]*/'';
 	</script>
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
