--- a/KosaESS/src/main/resources/static/css/student/subbar.css
+++ b/KosaESS/src/main/resources/static/css/student/subbar.css
@@ -1,22 +1,30 @@
 .sidebar {
 	background: #E7EFF3;
 	height: 100%;
-	width: 20%;
+	width: 18%;
 }
 
 .sidebar ul {
 	list-style: none;
-	padding: 10% 0 100% 0;
+	padding: 0;
+	margin:0;
 }
 
 .sidebar li {
-	padding: 5% 10%;
-	text-decoration: none;
+	padding: 5% 7%;
 	color: #0E5881;
 	font-size: 15px;
 	font-weight: 600;
 	align-items: center;
 	display: flex;
+	cursor: pointer;
+}
+
+.sidebar li:hover {
+	text-decoration: underline;
+	text-underline-position: from-font;
+	text-decoration-color: #0E5881;
+	text-decoration-thickness: 2px;
 }
 
 .sidebar img {
