--- a/KosaESS/src/main/resources/templates/include/student_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/student_subbar.html
@@ -7,13 +7,17 @@
 <body th:fragment="subbar">
 	<div class="sidebar">
 		<ul>
-			<li class="active" data-image="/img/manager_white.png" data-image="/img/manager_navy.png"><img
-				th:src="@{/img/manager_navy.png}"><span>개인 정보 조회/수정</span></li>
-			<li data-image="/img/list_white.png"><img
+			<li class="active" data-image="/img/user_white.png"
+				data-original-image="/img/user_navy.png"><img
+				th:src="@{/img/user_navy.png}"><span>개인 정보 조회/수정</span></li>
+			<li data-image="/img/list_white.png"
+				data-original-image="/img/list_navy.png"><img
 				th:src="@{/img/list_navy.png}"><span>교육 과정 지원 내역</span></li>
-			<li data-image="/img/print_white.png"><img
+			<li data-image="/img/print_white.png"
+				data-original-image="/img/print_navy.png"><img
 				th:src="@{/img/print_navy.png}"><span>교육 과정 이수 내역</span></li>
-			<li data-image="/img/worklog_white.png"><img
+			<li data-image="/img/worklog_white.png"
+				data-original-image="/img/worklog_navy.png"><img
 				th:src="@{/img/worklog_navy.png}"><span>출퇴근 관리</span></li>
 		</ul>
 	</div>
