--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -7,6 +7,7 @@
 </head>
 <head>
 <link th:href="@{/css/manager_post_list.css}" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<!-- 서브바 부분 -->
@@ -74,9 +75,10 @@
 				</div>
 			</div>
 			<!-- End 검색 버튼 -->
-			<span th:text="${stdtCnt}" id="stdtCnt"></span><span>명</span> <span
-				th:each="cmptCodeName:${cmptCodeNameList}"><button
-					th:value="${cmptCodeName.cmcdId}" th:text="${cmptCodeName.cmcdNm}"></button></span>
+			<span th:text="${stdtCnt}" id="stdtCnt"></span><span>명</span>
+			<span th:each="cmptCodeName:${cmptCodeNameList}">
+				<button th:value="${cmptCodeName.cmcdId}" th:text="${cmptCodeName.cmcdNm}"></button>
+			</span>
 			<table id="stdt_list_table">
 				<tr>
 					<th><input type="checkbox" id="chkAllStdt"></th>
@@ -90,7 +92,7 @@
 					<th>연락처</th>
 					<th>이수여부</th>
 				</tr>
-				<tr th:each="stdt:${stdtList}">
+				<tr th:each="stdt:${stdtList}" id="stdt_list_row">
 					<td><input type="checkbox" id="chkStdt"></td>
 					<td th:text="${stdtStat.count}"></td>
 					<td th:text="${stdt.stdtNm}"></td>
@@ -128,20 +130,16 @@
 	});
 	
 	function search() {
-		
 		var classId=document.getElementById('classId').options[document.getElementById('classId').selectedIndex].value;
-		var startDate='';
-		var endDate='';
+		var startDate = document.getElementById("startDate").value;
+		var endDate = document.getElementById("endDate").value;
 		var date = new Date();
 		var year = date.getFullYear();
-//	 	/*이번 달의 첫 날*/
 	 	function getFirstDay(){var month = ("0" + (1 + date.getMonth())).slice(-2);var day = "01";return year + "-" + month + "-" + day;}
-//	 	/*이번 달의 마지막 날*/
 	 	function getLastDay(){var month = ("0" + (1 + date.getMonth())).slice(-2);var lastDay = new Date(year,month, 0).getDate();return year + "-" + month + "-" + lastDay;}
-	 		if(startDate==''){startDate=getFirstDay();}
-	 		if(endDate==''){endDate=getLastDay();}
-		
-
+	 	if(startDate==''){startDate=getFirstDay();}
+	 	if(endDate==''){endDate=getLastDay();}
+	 	
 		$.ajax({
 			type:'get',
 			url:'/manager/student/search', // 서버의 엔드포인트 URL
@@ -151,67 +149,56 @@
  				, startDate:startDate
  				, endDate:endDate
 			},
+			async:false,
 			success: function(stdtListResponse) {
-				var stdtTableHead = '<tr><th><input type="checkbox" id="chkAllStdt"></th><th>번호</th><th>이름</th>';
-				var wlogCodeNameList;
-				var stdtTableBody;
-				var stdtListTable = document.getElementById("stdt_list_table");
+				//테이블의 모든 내용을 삭제
+				var stdtListTable = document.getElementById('stdt_list_table');
+				$('#stdt_list_table tr td').remove();
+
 				var stdtList = stdtListResponse.stdtList;
-				stdtListTable.removeChild(stdtListTable.childNodes[1]);
 				document.getElementById("stdtCnt").innerHTML=stdtList.length;
-// /*
-				$.ajax({
-					type:'get',
-					url:'/manager/student/search/codename',
-					success: function(wlogResponse) {
+
+				for(let i = 0; i < stdtList.length; i++){
+					var newRow = document.createElement('tr');
+					var rowNum = document.createElement('td');
+					rowNum.innerHTML=i+1;
+					var rowName = document.createElement('td');
+					rowName.innerHTML=stdtList[i].stdtNm;
+					var rowWlog = document.createElement('td');
+					$.ajax({
+						type:'get',
+						url:'/manager/student/search/codename',
+						async:false,
+						success: function(wlogResponse) {
 						wlogCodeNameList = wlogResponse.wlogCodeList;
-						for (let i = 0; i < wlogCodeNameList.length; i++) {
-							console.log(wlogCodeNameList[i].cmcdNm);
-							stdtTableHead +='<th>'+ wlogCodeNameList[i].cmcdNm +'</th>';
-							console.log(stdtTableHead);
+						for (let j = 0; j < wlogCodeNameList.length; j++) {
 						}
-					stdtTableHead +='<th>성별</th><th>생년월일</th><th>이메일</th><th>연락처</th><th>이수여부</th></tr>';
-					},error: function(error){
-						console.log("error: ", error);
-					}
-				})
-// */				
-				
-// 				for(let i = 0; i < stdtList.length; i++){
-// 					stdtTableBody +=
-// 					'<tr><td><input type="checkbox" id="chkStdt"></td>'+
-// 						'<td>'+ (i+1) +'</td>'+
-// 						'<td>'+ stdtList[i].stdtNm +'</td>';
-// // /*
-// 						$.ajax({
-// 							type:'get',
-// 							url:'/manager/student/search/codename',
-// 							success: function(wlogResponse) {
-// 								wlogCodeNameList = wlogResponse.wlogCodeList;
-
-// 							for (let j = 0; j < wlogCodeNameList.length; j++) {
-// 								stdtTableBody +='<td>'+ stdtList[i].wlogCnt.split(',')[j] +'</td>'
-// 							}
-
-// 							},error: function(error){
-// 								console.log("error: ", error);
-// 							}
-// 						})
-// // */
-// 					stdtTableBody +=
-// 						'<td>'+ stdtList[i].genderCd +'</td>'+
-// 						'<td>'+ stdtList[i].birthDd +'</td>'+
-// 						'<td>'+ stdtList[i].userEmail +'</td>'+
-// 						'<td>'+ stdtList[i].stdtTel +'</td>'+
-// 						'<td>'+ stdtList[i].jobCd +'</td></tr>';
-// 				}
-
-				stdtListTable.innerHTML=stdtTableHead//+stdtTableBody;
+						},error: function(error){console.log("error: ", error);}
+					})
+					var rowGender = document.createElement('td');
+					rowGender.innerHTML=stdtList[i].genderCd;
+					var rowBirth = document.createElement('td');
+					rowBirth.innerHTML=stdtList[i].birthDd;
+					var rowEmail = document.createElement('td');
+					rowEmail.innerHTML=stdtList[i].userEmail;
+					var rowTel = document.createElement('td');
+					rowTel.innerHTML=stdtList[i].stdtTel;
+					var rowJob = document.createElement('td');
+					rowJob.innerHTML=stdtList[i].jobCd;
+					newRow.appendChild(rowNum);
+					newRow.appendChild(rowName);
+					newRow.appendChild(rowGender);
+					newRow.appendChild(rowBirth);
+					newRow.appendChild(rowEmail);
+					newRow.appendChild(rowTel);
+					newRow.appendChild(rowJob);
+					stdtListTable.appendChild(newRow);
+				}
+				$('#stdt_list_table').appendChild(stdtTableBody);
 			},error: function(error){
 				console.log("error: ", error);
 			}
 		})
-
 	}
 
 </script>
