--- a/KosaESS/src/main/resources/templates/student/mypage.html
+++ b/KosaESS/src/main/resources/templates/student/mypage.html
@@ -70,6 +70,23 @@
 				<div class="workLog" style="display: none;">
 					<h3>출퇴근 관리</h3>
 				</div>
+				<div class="modal" style="display: none;">>
+					<div class="modalBody">
+						<div class="modalHeader">
+							<h2 class="modalTitle" style="margin: 0;">지원하기</h2>
+						</div>
+						<div class="modalContent">
+							<div class="upload-area">
+								<p>지원서파일을 여기에 첨부하세요.</p>
+								<input type="file" name="file" id="fileInput">
+							</div>
+						</div>
+						<div class="modalFooter">
+							<button type="reset" class="closeModalBtn">취소</button>
+							<button type="submit" class="aplyBtn">수정하기</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
