--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -135,7 +135,7 @@
 	        if (!confirm("로그아웃 하시겠습니까?")) {
 	        	//원래 화면으로
 	        } else {
-	        	location.replace("/login");
+	        	location.replace("/logout");
 	        }
 	    }
   </script>
