--- a/KosaESS/src/main/resources/static/css/admin/lecture_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/lecture_list.css
@@ -80,10 +80,12 @@
 	border-top: 2px solid #0E5881;
 	border-bottom: 1px solid #CFDEE6;
 	background: #F3F6F8;
+	display: flex;
 }
 
-.insert_professor {
-	display: flex;
+.insert div span{
+	color: #0E5881;
+    font-weight: bold;
 }
 
 .table_wrap {
